tests/rustdoc-ui/feature-gate-doc_cfg.stderr
error: only `hide` or `show` are allowed in `#[doc(auto_cfg(...))]`
  --> $DIR/feature-gate-doc_cfg.rs:1:17
   |
LL | #![doc(auto_cfg(false))]
   |                 ^^^^^
   |
   = note: `#[deny(invalid_doc_attributes)]` on by default

error: only `hide` or `show` are allowed in `#[doc(auto_cfg(...))]`
  --> $DIR/feature-gate-doc_cfg.rs:2:17
   |
LL | #![doc(auto_cfg(true))]
   |                 ^^^^

error: aborting due to 2 previous errors

